@@ -203,9 +203,10 @@ if [ "$DOWIN" = "yes" ]; then
 		cd openssl-* || error_cleanup "no openssl-X dir in tarball"
 		# configure for crosscompile, without CAPI because it fails
 		# cross-compilation and it is not used anyway
-		sslflags="no-asm --cross-compile-prefix=i686-w64-mingw32- -DOPENSSL_NO_CAPIENG mingw"
+		# before 1.0.1i need --cross-compile-prefix=i686-w64-mingw32-
+		sslflags="no-asm -DOPENSSL_NO_CAPIENG mingw"
 		info "winssl: Configure $sslflags"
-		./Configure --prefix="$sslinstall" $sslflags || error_cleanup "OpenSSL Configure failed"
+		CC=i686-w64-mingw32-gcc ./Configure --prefix="$sslinstall" $sslflags || error_cleanup "OpenSSL Configure failed"
 		info "winssl: make"
 		make || error_cleanup "OpenSSL crosscompile failed"
 		# only install sw not docs, which take a long time.
